Fix LUN logo overlap

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -23,6 +23,14 @@ body {
 /*    height: 360px;*/
 }
 
+/* LUN Logo at the top */
+#lun-logo {
+    position: absolute;
+    left: 359px;
+    top: 0px;
+    z-index: 2;
+}
+
 /* Gradient blank background */
 #background {
     position: relative;
@@ -61,7 +69,7 @@ iframe {
     top: 10px;
     left: 2px;
     height: 270px;
-    z-index:1;
+    z-index: 1;
 }
 
 /* Size of RSS feed iframe from LUN */
@@ -99,13 +107,6 @@ iframe {
     font-size: 21px;
 } */
 
-/* LUN Logo at the top */
-#lun-logo {
-    position: absolute;
-    left: 359px;
-    top: 0px;
-}
-
 /* General settings for all text */
 .font {
     position: relative;
@@ -121,7 +122,7 @@ iframe {
     text-align: center;
     top: 120px;
     left: 60px;
-    z-index:0;
+    z-index: 0;
 }
 
 /* LUN logo to display said message above */
@@ -129,7 +130,7 @@ iframe {
     position: absolute;
     top: 60px;
     left: 140px;
-    z-index:0;
+    z-index: 0;
 }
 
 /* LUNF FAQ link */
